--- a/Assignment - Ceaira.ipynb
+++ b/Assignment - Ceaira.ipynb
@@ -176,6 +176,8 @@
     }
    ],
    "source": [
+    "#Import libraries and datset\n",
+    "\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -344,6 +346,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df.tail(4)"
    ]
   },
@@ -364,6 +368,8 @@
     }
    ],
    "source": [
+    "#How many records are there in the dataset\n",
+    "\n",
     "df.shape"
    ]
   },
@@ -387,6 +393,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df.columns"
    ]
   },
@@ -420,6 +428,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df.dtypes"
    ]
   },
@@ -429,6 +439,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Correct date format\n",
+    "\n",
     "df[\"Date\"] = df[\"Date\"].replace(to_replace=r'T.*', value='', regex = True)\n",
     "df[\"Date\"] = pd.to_datetime (df[\"Date\"])"
    ]
@@ -465,6 +477,8 @@
     }
    ],
    "source": [
+    "#Describe datset with correct date format\n",
+    "\n",
     "df.dtypes"
    ]
   },
@@ -869,6 +883,8 @@
     }
    ],
    "source": [
+    "#Which period does it cover? How many different dates have job postings?\n",
+    "\n",
     "df.sort_values(by='Date')\n",
     "df[\"Date\"].value_counts()"
    ]
@@ -1095,6 +1111,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"Id\"].value_counts()"
    ]
   },
@@ -1126,6 +1144,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"Title\"].value_counts()"
    ]
   },
@@ -1157,6 +1177,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"Company\"].value_counts()"
    ]
   },
@@ -1221,6 +1243,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"Date\"].value_counts()"
    ]
   },
@@ -1252,6 +1276,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"Location\"].value_counts()"
    ]
   },
@@ -1291,6 +1317,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"Area\"].value_counts()"
    ]
   },
@@ -1341,6 +1369,8 @@
     }
    ],
    "source": [
+    "#How many job sectors (job classifications) are there in the dataset? List the name of each sector and its' total of job postings\n",
+    "\n",
     "df[\"Classification\"].value_counts()"
    ]
   },
@@ -1372,6 +1402,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"SubClassification\"].value_counts()"
    ]
   },
@@ -1403,6 +1435,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"Requirement\"].value_counts()"
    ]
   },
@@ -1434,6 +1468,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"FullDescription\"].value_counts()"
    ]
   },
@@ -1465,6 +1501,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"LowestSalary\"].value_counts()"
    ]
   },
@@ -1496,6 +1534,8 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"HighestSalary\"].value_counts()"
    ]
   },
@@ -1520,36 +1560,10 @@
     }
    ],
    "source": [
+    "#Describe datset\n",
+    "\n",
     "df[\"JobType\"].value_counts()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-c5566a60b06f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df np.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
