Upload latest version V4 notebook Susana's part

--- a/Susana_s5241528/A2_part1_SusanaV4.ipynb
+++ b/Susana_s5241528/A2_part1_SusanaV4.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -207,13 +207,13 @@
        "Treasury                                    44\n",
        "Insolvency & Corporate Recovery             37\n",
        "Cost Accounting                             31\n",
-       "Inventory & Fixed Assets                    17\n",
        "Forensic Accounting & Investigation         17\n",
+       "Inventory & Fixed Assets                    17\n",
        "Company Secretaries                         10\n",
        "Name: SubClassification, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "Name: SalaryRange, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -308,10 +308,12 @@
     }
    ],
    "source": [
-    "# Q2.1 The salaries are set as HighestSalary and LowestSalary, calc AverageSalary for each job. ****????\n",
+    "# Q2.1 The salaries are set as HighestSalary and LowestSalary, calc AverageSalary for each job.\n",
     "from math import *\n",
     "\n",
-    "df['AverageSalary'] = (df[\"HighestSalary\"] + df[\"LowestSalary\"])/2\n",
+    "# calculate average salary\n",
+    "df[\"AverageSalary\"] = (df[\"LowestSalary\"]+df[\"HighestSalary\"])/2\n",
+    "\n",
     "print(df[['Title', 'AverageSalary']])"
    ]
   }
